docs/en/6.0/api/NativeTabbar.md
#NativeTabbar
<div class="btn-group"><a href="#Methods" class="btn btn-outline-secondary">Methods<span class="badge badge-secondary ml-3">6</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><h6 class="dropdown-header">Methods - Class</h6>
<a href="#mcreate" data-target="cMethodcreate" class="dropdown-item">create</a><a href="#mcurrentTabIndex" data-target="cMethodcurrentTabIndex" class="dropdown-item"><span class='text-info'>currentTabIndex</span></a><a href="#mremove" data-target="cMethodremove" class="dropdown-item">remove</a><a href="#mremoveTab" data-target="cMethodremoveTab" class="dropdown-item">removeTab</a><a href="#msetTabBadge" data-target="cMethodsetTabBadge" class="dropdown-item">setTabBadge</a><a href="#mswitchTab" data-target="cMethodswitchTab" class="dropdown-item">switchTab</a></div></div><div class="btn-group"><a href="#Examples" class="btn btn-outline-secondary">Examples<span class="badge badge-secondary ml-3">3</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><a href="#e0" data-target="eExample0" class="dropdown-item">Create native tabbar</a><a href="#e1" data-target="eExample1" class="dropdown-item">Switch tab</a><a href="#e2" data-target="eExample2" class="dropdown-item">Remove tabbar</a></div></div><div class="btn-group"><a href="#Remarks" class="btn btn-outline-secondary">Remarks<span class="badge badge-secondary ml-3">1</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><a href="#r0" data-target="rRemark0" class="dropdown-item">Device Limitations With Multiple Tabs</a></div></div><div id="apibody" class="mt-3">
<p>The NativeTabbar methods let you use multiple instances of the RhoMobile webview in separate tabs.</p>
<p>On Android, iOS and WIndows Phone 8 the tabs are true Native Tabbar controls to give your application a native look and feel.No more than 4 tabs can be created in the Windows Phone 8 tabbar. A tabbar separator doesn&rsquo;t exist in Windows Phone 8. On Windows Mobile/CE there are no visible tabs. Either Tabbar or Toolbar should be used in an application &ndash; Tabbar and Toolbar shouldnot be used simultaneously.</p>

<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcreate'/><div class=' method  js ruby android ios wp8' id='mcreate'><div class="signature d-flex"><div class="name">create</div><div class='parameters'>(<span class="text-info">ARRAY</span> tabElements, <span class="text-info">HASH</span> tabBarProperties, <span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mcreate1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mcreate2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mcreate3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#mcreate4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mcreate6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-create'><div class="tab-pane fade active show" id="mcreate1"><p>Removes the current tabbar and replaces it with this one. Callback will be called when tab is switched.  Whilst the actual number of tabs you can create will depend on the memory available on your device there is an absolute upper limit of 30 tabs in any one application.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcreate2"><div><p><strong>Parameters</strong></p><ul><li>tabElements : <span class='text-info'>ARRAY</span><p><p>Array of Tab elements.</p>
 </p></li><ul><li>tabElement : <span class='text-info'>HASH</span><p><p>Properties of Tab elements.</p>
 </p></li><ul><li>label : <span class='text-info'>STRING</span><p><p>Visible label to display on the tabbar.</p>
 </p></li><li>action : <span class='text-info'>STRING</span><p><p>URL to page which will be loaded into tab. Predefined actions are not supported. It may be path to Ruby controller action; i.e. &lsquo;/app/Account&rsquo; would load the Account index action. For ruby callback use &lsquo;callback:/app/Account&rsquo; Or javascript method to call: &lsquo;javascript: methodOnTab();&rsquo;. Or path to html page to load.</p>
 </p></li><li>icon : <span class='text-info'>STRING</span><p><p>Relative path to tabbar item icon in your application; typically located in /public/images/.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>reload : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>When tab is activated  &ndash; page in tab will be reloaded.</p>
 </p></li><li>selectedColor : <span class='text-info'>INTEGER</span><p><p>Change the selected color of this tab. On Android this works only if you setup selectedColor for all tabs and also setup backgroundColor for the whole Tabbar. This property change background color on Android and <em>icon&rsquo;s</em> color on iOS according to the platform&rsquo;s UI-style specifications.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>disabled : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>Tab will be displayed as disabled.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>backgroundColor : <span class='text-info'>INTEGER</span><p><p> Background color for tab. Use when your application background color is not white for removing blink during switch tabs.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>useCurrentViewForTab : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>Gives a smooth transfer to a newly opened tab from the current view into this Tab and make this Tab active. Only one Tab can have this parameter.</p>
 Platforms:WM, CE, Win32, Android, iOS </p></li><li>perishable : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>Sets whether this tab is allowed to be destroyed when a memory limit is reached (Windows Mobile)</p>
 Platforms:WM </p></li><li>createOnInit : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>Create tab immediately when TabBar is created. Action also will be executed. If false, the tab will be created when it is switched to. Don&rsquo;t use this parameter on the devices with a small amount of RAM.</p>
 Platforms:WM </p></li></ul></ul><li>tabBarProperties : <span class='text-info'>HASH</span><p><p>Properties of TabBar.</p>
 </p></li><ul><li>verticalOrientation : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>Creates a vertical tabbar on the iPad.</p>
 Platforms:iOS </p></li><li>backgroundColor : <span class='text-info'>INTEGER</span><p><p>Background color of the tabbar.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>hiddenTabs : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: true</span><p><p>Do not display Tabs with labels.Only hiddenTab=true is currently supported.</p>
 Platforms:WM </p></li><li>createOnInit : <span class='text-info'>BOOLEAN</span><span class='badge badge-secondary '> Default: false</span><p><p>Create tabs immediately when TabBar is created. Action also will be executed. If false, then each tab will be created when first switch to the tab is executed. Don&rsquo;t use this parameter on the devices with a small amount of RAM.</p>
 Platforms:WM </p></li><li>placeTabsBottom : <span class='text-info'>BOOLEAN</span><p><p>Place TabBar to bottom instead of default top &ndash; only for Android.</p>
 Platforms:Android </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mcreate3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>tab_index : <span class='text-info'>INTEGER</span><p><p>New tab index.</p>
 </p></li><li>newTabIndex : <span class='text-info'>INTEGER</span><p><p>New tab index.</p>
 Platforms:WM </p></li><li>oldTabIndex : <span class='text-info'>INTEGER</span><p><p>New tab index. If you switched to first activated tab, when oldTabIndex will be -1, which means that there was no old tab index exists.</p>
 Platforms:WM </p></li><li>tabEvent : <span class='text-info'>STRING</span><p> Platforms:WM </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>onTabFocus</dt><dd><p>Fires when a tab gains focus.</p>
</dt><dt>onTabNewError</dt><dd><p>Fires when a new tab cannot be created.</p>
</dt></dl></li></ul></ul></div></div><div class="tab-pane fade" id="mcreate4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mcreate6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.create(<span class="text-info">ARRAY</span> tabElements, <span class="text-info">HASH</span> tabBarProperties, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::NativeTabbar.create(<span class="text-info">ARRAY</span> tabElements, <span class="text-info">HASH</span> tabBarProperties, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mcurrentTabIndex'/><div class=' method  js ruby android ios wp8' id='mcurrentTabIndex'><div class="signature d-flex"><div class="name"><span class="text-info">currentTabIndex</span></div><div class='parameters'>()</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mcurrentTabIndex1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentTabIndex4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentTabIndex6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-currentTabIndex'><div class="tab-pane fade active show" id="mcurrentTabIndex1"><span class='badge badge-info'>Replaces:</span> <span class='badge badge-info'>get_current_tab</span>  <p>Returns the current tab 0-based index.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcurrentTabIndex2"></div><div class="tab-pane fade" id="mcurrentTabIndex3"></div><div class="tab-pane fade" id="mcurrentTabIndex4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER</li></ul></div></div><div class="tab-pane fade" id="mcurrentTabIndex6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.currentTabIndex()</code> </li><li>Ruby: <code>Rho::NativeTabbar.currentTabIndex()</code></li></ul></li></ul></div></div></div>  </div><a name ='mremove'/><div class=' method  js ruby android ios wp8' id='mremove'><div class="signature d-flex"><div class="name">remove</div><div class='parameters'>()</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mremove1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mremove4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mremove6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-remove'><div class="tab-pane fade active show" id="mremove1"><p>Removes all tabbar except the default tabbar whose index value is 0. Does nothing if there is no active tabbar other than tab 0.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mremove2"></div><div class="tab-pane fade" id="mremove3"></div><div class="tab-pane fade" id="mremove4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mremove6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.remove()</code> </li><li>Ruby: <code>Rho::NativeTabbar.remove()</code></li></ul></li></ul></div></div></div>  </div><a name ='mremoveTab'/><div class=' method  js ruby' id='mremoveTab'><div class="signature d-flex"><div class="name">removeTab</div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mremoveTab1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mremoveTab2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mremoveTab4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mremoveTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-removeTab'><div class="tab-pane fade active show" id="mremoveTab1"><p>Removes the Tab by index. Method will remove the WebView for the specific tab, it will not remove the tab from the tab array, so all indexes will remain the same.You cannot delete the tab with useCurrentViewForTab flag.If you switch to previously removed tab, tab will be recreated.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mremoveTab2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span><p><p>The index for tab (index numbered from 0) to delete.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mremoveTab3"></div><div class="tab-pane fade" id="mremoveTab4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mremoveTab6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.removeTab(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::NativeTabbar.removeTab(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetTabBadge'/><div class=' method  js ruby ios' id='msetTabBadge'><div class="signature d-flex"><div class="name">setTabBadge</div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex, <span class="text-info">STRING</span> badge)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#msetTabBadge1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#msetTabBadge2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#msetTabBadge4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#msetTabBadge6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-setTabBadge'><div class="tab-pane fade active show" id="msetTabBadge1"><p>Set the iPhone badge to tab.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"></p></div></p></div><div class="tab-pane fade" id="msetTabBadge2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span><p><p>The index for this tab (index numbered from 0). You can also set -1 to select current tab for set badge.</p>
 </p></li><li>badge : <span class='text-info'>STRING</span><p><p>String for iPhone badge, such as &lsquo;12&rsquo;.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetTabBadge3"></div><div class="tab-pane fade" id="msetTabBadge4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetTabBadge6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.setTabBadge(<span class="text-info">INTEGER</span> tabIndex, <span class="text-info">STRING</span> badge)</code> </li><li>Ruby: <code>Rho::NativeTabbar.setTabBadge(<span class="text-info">INTEGER</span> tabIndex, <span class="text-info">STRING</span> badge)</code></li></ul></li></ul></div></div></div>  </div><a name ='mswitchTab'/><div class=' method  js ruby android ios wp8' id='mswitchTab'><div class="signature d-flex"><div class="name">switchTab</div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mswitchTab1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mswitchTab2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mswitchTab4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mswitchTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-switchTab'><div class="tab-pane fade active show" id="mswitchTab1"><p>Switch active tab.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mswitchTab2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span><p><p>The index for this tab (index numbered from 0).</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mswitchTab3"></div><div class="tab-pane fade" id="mswitchTab4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mswitchTab6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.switchTab(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::NativeTabbar.switchTab(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Examples'></a>
<h2>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Create native tabbar</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>Create a platform-native tabbar. Tabs can link to internal application links (such as those built with &ldquo;url_for&rdquo;) as well as external URLs.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li class="nav-item"><a class="nav-link " href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

           
function create_tabbar() {
    Rho.NativeTabbar.create([{
            label: "Home",
            action: "/app"
        }, {
            label: "example.com"
            action: "http://www.example.com"
        }], {}, tabbar_callback
    );
}

function tabbar_callback(params) {
    alert("Switching to tab "+params["tab_index"]);
}
                   
                 </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
def create_tabbar
    Rho::NativeTabbar.create([{
      :label =&gt; "Home",
      :action =&gt; url_for(Rho::Application.startURI)
      },
      {
      :label =&gt; "example.com",
      :action =&gt; "http://www.example.com",
      }], {}, url_for(:action =&gt; :tabbar_callback)
    )
end

def tabbar_callback
    Alert.show_popup("Switching to tab #{@params["rab_index"]}")
end
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Switch tab</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>Switch the active tab.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li class="nav-item"><a class="nav-link " href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
// Make the third tab active
Rho.NativeTabbar.switchTab(2);
                   
                 </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Make the third tab active
Rho::NativeTabbar.switchTab(2);
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Remove tabbar</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>Remove the tabbar.</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li><li class="nav-item"><a class="nav-link " href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.NativeTabbar.remove();
                   
                 </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
Rho::NativeTabbar.remove
                   
                 </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>Device Limitations With Multiple Tabs</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>Please consider the limitations of the device when creating multiple tabs with the Native TabBar. The number of tabs that can be created will depend on the resources of the device and the complexities of the pages displayed in those tabs but, as a general rule, a maximum of 10 tabs on an MC75a should be enforced. Also consider setting the <code>createOnInit</code> property to false so that not all tabs are initialized when the TabBar is first created and using the in-process engine for a more responsive experience.</p>
  </div></div></div></div></div>