docs/en/7.1/api/NativeTabbar.md
#NativeTabbar
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;6</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mcreate" data-target="cMethodcreate" class="autouncollapse">create</a></li><li><a href="#mcurrentTabIndex" data-target="cMethodcurrentTabIndex" class="autouncollapse">&nbsp;<span class='text-info'>currentTabIndex</span></a></li><li><a href="#mremove" data-target="cMethodremove" class="autouncollapse">remove</a></li><li><a href="#mremoveTab" data-target="cMethodremoveTab" class="autouncollapse">removeTab</a></li><li><a href="#msetTabBadge" data-target="cMethodsetTabBadge" class="autouncollapse">setTabBadge</a></li><li><a href="#mswitchTab" data-target="cMethodswitchTab" class="autouncollapse">switchTab</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Create native tabbar</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Switch tab</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Remove tabbar</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;1</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">Device Limitations With Multiple Tabs</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>The NativeTabbar methods let you use multiple instances of the RhoMobile webview in separate tabs.</p>
<p>On Android, iOS and WIndows Phone 8 the tabs are true Native Tabbar controls to give your application a native look and feel.No more than 4 tabs can be created in the Windows Phone 8 tabbar. A tabbar separator doesn&rsquo;t exist in Windows Phone 8. On Windows Mobile/CE there are no visible tabs. Either Tabbar or Toolbar should be used in an application - Tabbar and Toolbar shouldnot be used simultaneously.</p>

<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.
    :::ruby
    extensions: [&ldquo;coreapi&rdquo;]</p>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcreate'/><div class=' method  js ruby android ios wp8' id='mcreate'><h3><strong  >create</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">ARRAY</span> tabElements, <span class="text-info">HASH</span> tabBarProperties, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcreate1" data-toggle="tab">Description</a></li><li ><a href="#mcreate2" data-toggle="tab">Parameters</a></li><li ><a href="#mcreate3" data-toggle="tab">Callback</a></li><li ><a href="#mcreate4" data-toggle="tab">Return</a></li><li ><a href="#mcreate6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-create'><div class="tab-pane fade active in" id="mcreate1"><p>Removes the current tabbar and replaces it with this one. Callback will be called when tab is switched.  Whilst the actual number of tabs you can create will depend on the memory available on your device there is an absolute upper limit of 30 tabs in any one application.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcreate2"><div><p><strong>Parameters</strong></p><ul><li>tabElements : <span class='text-info'>ARRAY</span><p><p>Array of Tab elements.</p>
 </p></li><ul><li>tabElement : <span class='text-info'>HASH</span><p><p>Properties of Tab elements.</p>
 </p></li><ul><li>label : <span class='text-info'>STRING</span><p><p>Visible label to display on the tabbar. Label is required property. If you do not want to display label - set it to empty string.</p>
 </p></li><li>action : <span class='text-info'>STRING</span><p><p>URL to page which will be loaded into tab. Predefined actions are not supported. It may be path to Ruby controller action; i.e. &lsquo;/app/Account&rsquo; would load the Account index action. For ruby callback use &lsquo;callback:/app/Account&rsquo; Or javascript method to call: &lsquo;javascript: methodOnTab();&rsquo;. Or path to html page to load.</p>
 </p></li><li>icon : <span class='text-info'>STRING</span><p><p>Relative path to tabbar item icon in your application; typically located in /public/images/. iPhone and Android: Icons must be no more than 30x30 pixels and must be in .png format.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>reload : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>When tab is activated  - page in tab will be reloaded.</p>
 </p></li><li>selectedColor : <span class='text-info'>INTEGER</span><p><p>Change the selected color of this tab. On Android this works only if you setup selectedColor for all tabs and also setup backgroundColor for the whole Tabbar. This property change background color on Android and <em>icon&rsquo;s</em> color on iOS according to the platform&rsquo;s UI-style specifications.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>disabled : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>Tab will be displayed as disabled.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>backgroundColor : <span class='text-info'>INTEGER</span><p><p> Background color for tab. Use when your application background color is not white for removing blink during switch tabs.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>useCurrentViewForTab : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>Gives a smooth transfer to a newly opened tab from the current view into this Tab and make this Tab active. Only one Tab can have this parameter.</p>
 Platforms:WM, CE, Win32, Android, iOS </p></li><li>perishable : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>Sets whether this tab is allowed to be destroyed when a memory limit is reached (Windows Mobile)</p>
 Platforms:WM </p></li><li>createOnInit : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>Create tab immediately when TabBar is created. Action also will be executed. If false, the tab will be created when it is switched to. Don&rsquo;t use this parameter on the devices with a small amount of RAM.</p>
 Platforms:WM </p></li></ul></ul><li>tabBarProperties : <span class='text-info'>HASH</span><p><p>Properties of TabBar.</p>
 </p></li><ul><li>verticalOrientation : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>Creates a vertical tabbar on the iPad.</p>
 Platforms:iOS </p></li><li>backgroundColor : <span class='text-info'>INTEGER</span><p><p>Background color of the tabbar.</p>
 Platforms:Win32, Android, iOS, WP8 </p></li><li>hiddenTabs : <span class='text-info'>BOOLEAN</span><span class='label '> Default: true</span><p><p>Do not display Tabs with labels.Only hiddenTab=true is currently supported.</p>
 Platforms:WM </p></li><li>createOnInit : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>Create tabs immediately when TabBar is created. Action also will be executed. If false, then each tab will be created when first switch to the tab is executed. Don&rsquo;t use this parameter on the devices with a small amount of RAM.</p>
 Platforms:WM </p></li><li>placeTabsBottom : <span class='text-info'>BOOLEAN</span><p><p>Place TabBar to bottom instead of default top - only for Android.</p>
 Platforms:Android </p></li><li>invisibleTabControl : <span class='text-info'>BOOLEAN</span><p><p>Make TabBar control invisible. Application developer should switch between tabs programatically.</p>
 Platforms:iOS </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mcreate3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>tab_index : <span class='text-info'>INTEGER</span><p><p>New tab index.</p>
 </p></li><li>newTabIndex : <span class='text-info'>INTEGER</span><p><p>New tab index.</p>
 Platforms:WM </p></li><li>oldTabIndex : <span class='text-info'>INTEGER</span><p><p>New tab index. If you switched to first activated tab, when oldTabIndex will be -1, which means that there was no old tab index exists.</p>
 Platforms:WM </p></li><li>tabEvent : <span class='text-info'>STRING</span><p> Platforms:WM </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>onTabFocus</dt><dd><p>Fires when a tab gains focus.</p>
</dt><dt>onTabNewError</dt><dd><p>Fires when a new tab cannot be created.</p>
</dt></dl></li></ul></ul></div></div><div class="tab-pane fade" id="mcreate4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mcreate6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.create(<span class="text-info">ARRAY</span> tabElements, <span class="text-info">HASH</span> tabBarProperties, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::NativeTabbar.create(<span class="text-info">ARRAY</span> tabElements, <span class="text-info">HASH</span> tabBarProperties, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mcurrentTabIndex'/><div class=' method  js ruby android ios wp8' id='mcurrentTabIndex'><h3><strong  ><span class="text-info">currentTabIndex</span></strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcurrentTabIndex1" data-toggle="tab">Description</a></li><li ><a href="#mcurrentTabIndex4" data-toggle="tab">Return</a></li><li ><a href="#mcurrentTabIndex6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-currentTabIndex'><div class="tab-pane fade active in" id="mcurrentTabIndex1"><span class='label label-info'>Replaces:</span> <span class='label label-info'>get_current_tab</span>  <p>Returns the current tab 0-based index.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcurrentTabIndex2"></div><div class="tab-pane fade" id="mcurrentTabIndex3"></div><div class="tab-pane fade" id="mcurrentTabIndex4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER</li></ul></div></div><div class="tab-pane fade" id="mcurrentTabIndex6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.currentTabIndex()</code> </li><li>Ruby: <code>Rho::NativeTabbar.currentTabIndex()</code></li></ul></li></ul></div></div></div>  </div><a name ='mremove'/><div class=' method  js ruby android ios wp8' id='mremove'><h3><strong  >remove</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mremove1" data-toggle="tab">Description</a></li><li ><a href="#mremove4" data-toggle="tab">Return</a></li><li ><a href="#mremove6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-remove'><div class="tab-pane fade active in" id="mremove1"><p>Removes all tabbar except the default tabbar whose index value is 0. Does nothing if there is no active tabbar other than tab 0.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mremove2"></div><div class="tab-pane fade" id="mremove3"></div><div class="tab-pane fade" id="mremove4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mremove6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.remove()</code> </li><li>Ruby: <code>Rho::NativeTabbar.remove()</code></li></ul></li></ul></div></div></div>  </div><a name ='mremoveTab'/><div class=' method  js ruby' id='mremoveTab'><h3><strong  >removeTab</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mremoveTab1" data-toggle="tab">Description</a></li><li ><a href="#mremoveTab2" data-toggle="tab">Parameters</a></li><li ><a href="#mremoveTab4" data-toggle="tab">Return</a></li><li ><a href="#mremoveTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-removeTab'><div class="tab-pane fade active in" id="mremoveTab1"><p>Removes the Tab by index. Method will remove the WebView for the specific tab, it will not remove the tab from the tab array, so all indexes will remain the same.You cannot delete the tab with useCurrentViewForTab flag.If you switch to previously removed tab, tab will be recreated.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mremoveTab2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span><p><p>The index for tab (index numbered from 0) to delete.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mremoveTab3"></div><div class="tab-pane fade" id="mremoveTab4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mremoveTab6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.removeTab(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::NativeTabbar.removeTab(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetTabBadge'/><div class=' method  js ruby ios' id='msetTabBadge'><h3><strong  >setTabBadge</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex, <span class="text-info">STRING</span> badge)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetTabBadge1" data-toggle="tab">Description</a></li><li ><a href="#msetTabBadge2" data-toggle="tab">Parameters</a></li><li ><a href="#msetTabBadge4" data-toggle="tab">Return</a></li><li ><a href="#msetTabBadge6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setTabBadge'><div class="tab-pane fade active in" id="msetTabBadge1"><p>Set the iPhone badge to tab.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"></p></div></p></div><div class="tab-pane fade" id="msetTabBadge2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span><p><p>The index for this tab (index numbered from 0). You can also set -1 to select current tab for set badge.</p>
 </p></li><li>badge : <span class='text-info'>STRING</span><p><p>String for iPhone badge, such as &lsquo;12&rsquo;.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetTabBadge3"></div><div class="tab-pane fade" id="msetTabBadge4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetTabBadge6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.setTabBadge(<span class="text-info">INTEGER</span> tabIndex, <span class="text-info">STRING</span> badge)</code> </li><li>Ruby: <code>Rho::NativeTabbar.setTabBadge(<span class="text-info">INTEGER</span> tabIndex, <span class="text-info">STRING</span> badge)</code></li></ul></li></ul></div></div></div>  </div><a name ='mswitchTab'/><div class=' method  js ruby android ios wp8' id='mswitchTab'><h3><strong  >switchTab</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mswitchTab1" data-toggle="tab">Description</a></li><li ><a href="#mswitchTab2" data-toggle="tab">Parameters</a></li><li ><a href="#mswitchTab4" data-toggle="tab">Return</a></li><li ><a href="#mswitchTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-switchTab'><div class="tab-pane fade active in" id="mswitchTab1"><p>Switch active tab.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mswitchTab2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span><p><p>The index for this tab (index numbered from 0).</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mswitchTab3"></div><div class="tab-pane fade" id="mswitchTab4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mswitchTab6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.NativeTabbar.switchTab(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::NativeTabbar.switchTab(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Create native tabbar</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>Create a platform-native tabbar. Tabs can link to internal application links (such as those built with &ldquo;url_for&rdquo;) as well as external URLs.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

           
function create_tabbar() {
    Rho.NativeTabbar.create([{
            label: "Home",
            action: "/app"
        }, {
            label: "example.com"
            action: "http://www.example.com"
        }], {}, tabbar_callback
    );
}

function tabbar_callback(params) {
    alert("Switching to tab "+params["tab_index"]);
}
                   
                 </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
def create_tabbar
    Rho::NativeTabbar.create([{
      :label =&gt; "Home",
      :action =&gt; url_for(Rho::Application.startURI)
      },
      {
      :label =&gt; "example.com",
      :action =&gt; "http://www.example.com",
      }], {}, url_for(:action =&gt; :tabbar_callback)
    )
end

def tabbar_callback
    Alert.show_popup("Switching to tab #{@params["rab_index"]}")
end
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Switch tab</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>Switch the active tab.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
// Make the third tab active
Rho.NativeTabbar.switchTab(2);
                   
                 </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Make the third tab active
Rho::NativeTabbar.switchTab(2);
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Remove tabbar</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>Remove the tabbar.</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.NativeTabbar.remove();
                   
                 </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
Rho::NativeTabbar.remove
                   
                 </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>Device Limitations With Multiple Tabs</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>Please consider the limitations of the device when creating multiple tabs with the Native TabBar. The number of tabs that can be created will depend on the resources of the device and the complexities of the pages displayed in those tabs but, as a general rule, a maximum of 10 tabs on an MC75a should be enforced. Also consider setting the <code>createOnInit</code> property to false so that not all tabs are initialized when the TabBar is first created and using the in-process engine for a more responsive experience.</p>
  </div></div></div></div></div>